--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <nav>
         <h1 class="title">Phasmophobia Ghost Casino</h1>
         <div class="buttons">
-            <button class="resetBTN button" title="Resets all settings made by the user" onclick=reset()>Reset
+            <button class="resetBTN button" title="Resets all settings made by the user to default (ghost colors, page colors and spin time)." onclick=reset()>Reset
                 page</button>
             <button class="settingsBTN button" title="Change the current settings (ghost types and colors)">Change
                 Settings</button>
-            <button class="shareBTN button" title="Share the current settings" onclick=share()>Share</button>
+            <button class="shareBTN button" title="Share the current ghost selection and ghost colors. Page colors are currently not included." onclick=share()>Share</button>
+            <button class="saveBTN button" title="Save the current settings" onclick=SaveSetup()>Save setup</button>
             <!-- <button class="shareBTN button" title="Load settings shared by another user" onclick=loadsettings()>Load</button> -->
             <button class="aboutBTN button" title="About this page (redirect to github.com)"
                 onclick=about()>About</button>
